# gcp_tokendistributor

./: README.md  end_to_end.sh  main.tf  output.tf  variables.tf
alice/: backend.tf  main.tf  outputs.tf  variables.tf  versions.tf
alice/app/: Dockerfile  go.mod  go.sum  server.go
alice/certs/: tokenservice.key
alice/deploy/: main.tf  outputs.tf  variables.tf
alice/setup/: firestore.tf  gcr.tf  main.tf  network.tf  outputs.tf  secrets.tf  svcaccount.tf  variables.tf
alice/vpn/: variables.tf  vpn.tf
app/: BUILD.bazel  Dockerfile.client  Dockerfile.server  WORKSPACE  cloudbuild-tc.yaml  cloudbuild-ts.yaml  go.mod  go.sum  main.tf  repositories.bzl  secrets.json  variabls.tf
app/certs/: BUILD.bazel  tokenclient.crt  tokenclient.key  tokenservice.crt  tokenservice.key
app/python/: README.md  token_client.py
app/src/client/: BUILD.bazel  client.go
app/src/provisioner/: BUILD.bazel  provisioner.go
app/src/provisioner/oid/: BUILD.bazel  go.mod
app/src/server/: BUILD.bazel  server.go
app/src/tokenservice/: BUILD.bazel  go.mod  tokenservice.pb.go  tokenservice.proto  tokenservice.proto.pb
app/src/util/certparser/: BUILD.bazel  certparser.go  go.mod
app/src/util/certparser/oid/: BUILD.bazel  oid.go
bob/: backend.tf  bob-init-logging.yaml  bob-init.yaml  main.tf  outputs.tf  variables.tf
bob/app/: Dockerfile  go.mod  go.sum  server.go
bob/deploy/: iam.tf  main.tf  outputs.tf  variables.tf
bob/setup/: gcr.tf  main.tf  network.tf  outputs.tf  secrets.tf  svcaccount.tf  variables.tf
bob/vpn/: outputs.tf  variables.tf  vpn.tf
gcloud_setup/: README.md  gcloud_config.md  tc-cloud-config.yaml.tmpl  ts-cloud-config.yaml.tmpl
logs/: client_log.md  server_log.md
test/: cloudbuild.yaml
