load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

go_binary(
    name = "client",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "tokenclient",
    base = "@alpine_linux_amd64//image",
    entrypoint = ["/client"],
    files = [":client"], 
    repository = "gcr.io/yourproject/tokenclient"
)

go_library(
    name = "go_default_library",
    srcs = ["client.go"],
    importpath = "main",
    visibility = ["//visibility:private"],
    deps = [
        "//src/tokenservice:go_default_library",    
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
        "@org_golang_google_grpc//credentials/alts:go_default_library",
        "@org_golang_google_grpc//credentials/oauth:go_default_library",                
        "@org_golang_google_grpc//peer:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",                
        "@com_github_google_uuid//:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@org_golang_google_api//idtoken:go_default_library",
        "@org_golang_google_genproto//googleapis/cloud/secretmanager/v1:go_default_library",
        "@com_google_cloud_go//secretmanager/apiv1:go_default_library",

    ],
)