load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

go_binary(
    name = "server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "tokenserver",
    base = "@alpine_linux_amd64//image",
    entrypoint = ["/server"],
    files = [
        ":server",
        "//certs:tls-ca.crt",
        "//certs:tokenservice.crt",
        "//certs:tokenservice.key",
    ],
)

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    importpath = "main",
    visibility = ["//visibility:private"],
    deps = [
        "//src/tokenservice:go_default_library",
        "@com_google_cloud_go_firestore//:go_default_library", 
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
        "@org_golang_google_grpc//credentials/alts:go_default_library",
        "@org_golang_google_grpc//credentials/oauth:go_default_library",                
        "@org_golang_google_grpc//peer:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",                
        "@com_github_google_uuid//:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@org_golang_google_api//idtoken:go_default_library",
        "@go_googleapis//google/cloud/secretmanager/v1:secretmanager_go_proto",        
        "@com_google_cloud_go//secretmanager/apiv1:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//health:go_default_library",
        "@org_golang_google_grpc//health/grpc_health_v1:go_default_library",        
        "@org_golang_google_grpc//status:go_default_library",                
        "@org_golang_google_api//compute/v1:go_default_library",    
        "@com_github_lestrrat_go_jwx//jwk:go_default_library",
        "@com_github_dgrijalva_jwt_go//:go_default_library",
        "@com_github_google_go_tpm//tpm2:go_default_library",
    ],
)


