load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")


go_library(
    name = "go_default_library",
    srcs = ["certparser.go"],
    importpath = "github.com/salrashid123/gcp_tokendistributor/certparser",
    visibility = ["//visibility:public"],
    deps = [
        "//src/util/certparser/oid:go_default_library",
        "@org_golang_x_crypto//cryptobyte:go_default_library", 
    ],
)